--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,7 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mocha/2.3.4/mocha.css" type="text/css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/2.3.4/mocha.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.4.1/chai.js" type="text/javascript"></script>
     <script src="../chai-jasmine.js" type="text/javascript"></script>
     <script src="../spec/asymmetric_equality/AnySpec" type="text/javascript"></script>
     <script src="../spec/asymmetric_equality/AnythingSpec" type="text/javascript"></script>
